<resources>
    <string name="app_name">Gym App</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="greetings">Greetings</string>
    <string name="logo_description">Gym Logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="action_settings">Settings</string>
    <string name="action_log_out">Log Out</string>
    <string name="home_menu">Home</string>
    <string name="action_websearch">Action Web Search</string>


    <!-- For the navigation drawer -->
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_reminders">Reminders</string>
    <string name="nav_swipe_card">Swipe Card</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Log Out</string>
    <string name="stat_tracker">Statistics</string>


    <string name="artur_dermenji">Artur Dermenji</string>
    <string name="adermenji_gmail_com">adermenji@gmail.com</string>
    <string name="title_activity_home_fragment">HomeFragment</string>

    <!--For the SwipeCard Layout-->
    <string name="swipeIn">Swipe In</string>
    <string name="swipeOut">Swipe Out</string>


</resources>
