<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group  android:checkableBehavior="single"
            android:id="@+id/nav_group_mainFeatures">

        <item
            android:id="@+id/home"
            android:checked="false"
            android:icon="@drawable/home"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/reminder"
            android:checked="false"
            android:icon="@drawable/reminder"
            android:title="@string/nav_reminders" />

        <item
            android:id="@+id/swipe_card"
            android:checked="false"

            android:title="@string/nav_swipe_card" />
            <!-- ToDo: find Icon -->


    </group>
    <group  android:checkableBehavior="single"
            android:id="@+id/nav_group_settings">

        <item
            android:id="@+id/settings"
            android:checked="false"
            android:icon="@drawable/settings"
            android:title="@string/nav_settings" />

        <item
            android:id="@+id/logout"
            android:checked="false"
            android:icon="@drawable/logout"

            android:title="@string/nav_logout" />

    </group>
</menu>