<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.shannonbirch.gym.gymapp.RegisterActivity"
    android:fitsSystemWindows="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Register Email -->
            <EditText
                android:id="@+id/register_email"
                android:labelFor="@+id/register_email"
                android:hint="@string/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/confirm_register_email"
                android:labelFor="@+id/confirm_register_email"
                android:hint="@string/confirm_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <!-- Register Password -->
            <EditText
                android:id="@+id/register_password"
                android:labelFor="@+id/register_password"
                android:hint="@string/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:ems="10"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/confirm_register_password"
                android:labelFor="@+id/confirm_register_password"
                android:hint="@string/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:ems="10"
                android:inputType="textPassword" />

            <!-- Register Button -->
            <Button
                android:id="@+id/loginButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:minHeight="40dp"
                android:background="@drawable/button"
                android:layout_marginTop="50dp"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="100dp"
                android:text="@string/login"
                android:textColor="@drawable/text_color"
                android:textAllCaps="false"/>

        </LinearLayout>

        <include
            android:id="@+id/tool_bar"
            layout="@layout/tool_bar">

        </include>
    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>
